# python-youtube-transcript

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: build.yml
src/: main.py  web_app.py
src/core/: __init__.py  formatting.py  gemini.py  sections.py  transcript.py
src/templates/: index.html
src/utils/: __init__.py  file_io.py  json_utils.py
static/: style.css
